test/syntax/fail/no_params_in_node.sync
let node f = 4
